# ZEDBOT-HARDWARE-

ZED-mobile-cleaning-simulated-robot./: README.md
ZED-mobile-cleaning-simulated-robot./robot/: CMakeLists.txt  start.sh
ZED-mobile-cleaning-simulated-robot./robot/src/drive_to_point/: CMakeLists.txt
ZED-mobile-cleaning-simulated-robot./robot/src/drive_to_point/install/: local_setup.sh  setup.sh
ZED-mobile-cleaning-simulated-robot./robot/src/drive_to_point/install/drive_to_point/lib/drive_to_point/: amclpose  drive_to_point
ZED-mobile-cleaning-simulated-robot./robot/src/drive_to_point/install/drive_to_point/share/drive_to_point/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ZED-mobile-cleaning-simulated-robot./robot/src/drive_to_point/log/: latest_build
ZED-mobile-cleaning-simulated-robot./robot/src/drive_to_point/src/: amcl_pose.cpp  drive_point.cpp
ZED-mobile-cleaning-simulated-robot./robot/src/project/: CMakeLists.txt
ZED-mobile-cleaning-simulated-robot./robot/src/project/install/: local_setup.sh  setup.sh
ZED-mobile-cleaning-simulated-robot./robot/src/project/install/project/lib/project/: avoid_obstacle  move  project  sub
ZED-mobile-cleaning-simulated-robot./robot/src/project/install/project/share/ament_index/resource_index/package_run_dependencies/: project
ZED-mobile-cleaning-simulated-robot./robot/src/project/install/project/share/ament_index/resource_index/parent_prefix_path/: project
ZED-mobile-cleaning-simulated-robot./robot/src/project/install/project/share/project/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
ZED-mobile-cleaning-simulated-robot./robot/src/project/install/project/share/project/cmake/: projectConfig-version.cmake  projectConfig.cmake
ZED-mobile-cleaning-simulated-robot./robot/src/project/install/project/share/project/environment/: ament_prefix_path.dsv  path.dsv
ZED-mobile-cleaning-simulated-robot./robot/src/project/log/: latest_build
ZED-mobile-cleaning-simulated-robot./robot/src/project/src/: avoid_obstacle.cpp  drive_straight.cpp  pub.cpp  sub.cpp
ZED-mobile-cleaning-simulated-robot./ros2_mapping/: CMakeLists.txt  package.xml
ZED-mobile-cleaning-simulated-robot./zed_bot_base/: CMakeLists.txt  package.xml
ZED-mobile-cleaning-simulated-robot./zed_bot_description/: CMakeLists.txt  package.xml
ZED-mobile-cleaning-simulated-robot./zed_bot_rviz/: CMakeLists.txt  package.xml
ZED-mobile-cleaning-simulated-robot./zed_bot_sim/: package.xml  (+1 more)
(+98 files in other folders)
